--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
                <div class="columns download">
                   <p>
-                     <a href="D:\personal blog 2\Ceevee10\MOHAN RESUME.pdf" class="button" target="_blank"><i class="fa fa-download"></i>Download Resume</a>
+                     <a href="MOHAN RESUME.pdf" class="button" target="_blank"><i class="fa fa-download"></i>Download Resume</a>
                   </p>
                </div>
 
